<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/locationAlarmCreateRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vladbakalo.create_location_alarm.ui.fragment.alarm_create.CreateLocationAlarmFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/list_item_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/locationAlarmCreateClBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|snap">

                <com.vladbakalo.core.view.MainEditText
                    android:id="@+id/locationAlarmCreateEtNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_list_item_margin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:mainEditTextHint="@string/name"
                    app:mainEditTextType="name" />

                <com.vladbakalo.core.view.MainEditText
                    android:id="@+id/locationAlarmCreateEtAddressText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/locationAlarmCreateEtNameText"
                    app:mainEditTextHint="@string/address"
                    app:mainEditTextType="address" />

                <LinearLayout
                    android:id="@+id/locationAlarmCreateLlCoordBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/locationAlarmCreateEtAddressText">

                    <com.vladbakalo.core.view.MainEditText
                        android:id="@+id/locationAlarmCreateEtLatitudeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/half_list_item_margin"
                        android:layout_weight="1"
                        app:mainEditTextHelper="@string/valid_latitude_example"
                        app:mainEditTextHint="@string/latitude"
                        app:mainEditTextType="latitude" />

                    <com.vladbakalo.core.view.MainEditText
                        android:id="@+id/locationAlarmCreateEtLongitudeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/half_list_item_margin"
                        android:layout_weight="1"
                        app:mainEditTextHelper="@string/valid_longitude_example"
                        app:mainEditTextHint="@string/longitude"
                        app:mainEditTextType="longitude" />
                </LinearLayout>

                <com.vladbakalo.core.view.MainEditText
                    android:id="@+id/locationAlarmCreateEtNoteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/locationAlarmCreateLlCoordBlock"
                    app:mainEditTextHint="@string/note"
                    app:mainEditTextType="name" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/list_item_margin"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/locationAlarmCreateLlAlarmsBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="@dimen/half_list_item_margin"
                android:includeFontPadding="false"
                android:text="@string/alarms"
                style="@style/LocationAlarm.TextInputLayoutTittle" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_alarm_block">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/locationAlarmCreateTvNoListItemsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/list_item_margin_large"
                    android:layout_gravity="center"
                    android:text="@string/no_alarms"
                    style="@style/LocationAlarm.Text.EmptyText" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/locationAlarmCreateRvAlarmList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_distance_alarm" />
            </FrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/locationAlarmCreateBtnAddAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_distance"
        android:contentDescription="@string/add_distance"
        android:layout_margin="@dimen/half_list_item_margin"
        android:layout_gravity="bottom|right"
        app:icon="@drawable/ic_add_black_24dp"
        style="@style/LocationAlarm.Button.ExtendedFab"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>