<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomNavigationMenuMap"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />

    <item
        android:id="@+id/bottomNavigationMenuList"
        android:icon="@drawable/ic_format_list"
        android:title="@string/list" />

    <item
        android:id="@+id/bottomNavigationMenuSettings"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/settings"
        android:visible="false"/>
</menu>