<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alarmListClRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alarmListRvList"
...
            android:layout_height="wrap_content"
            android:text="@string/alarm_list_empty"
            style="@style/LocationAlarm.Text.EmptyText" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/alarmListFabAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_alarm"
        android:contentDescription="@string/add_alarm"
        android:layout_margin="@dimen/half_list_item_margin"
        app:icon="@drawable/ic_add_black_24dp"
...
